# rivals-vfx-editor-linux

./: Cargo.toml  dist-workspace.toml  package.json  tauri.conf.json
RVFXE/: main.js
RVFXE/batch-scripts/: Rivals.usmap
src/: lib.rs
