[package]
name = "rivals-vfx-editor"
version = "1.2.0"
description = "A simple yet powerful web-based editor for batch editing color parameters in Marvel Rivals' VFX material files."
authors = ["Saturn"]
edition = "2021"
repository = "https://github.com/0xSaturno/rivals-vfx-editor.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rivals_vfx_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
